# modelica_simulation_mcp_server

./: .gitignore  LICENSE  README.md  install.py  install_orthogonal_mcp_server.py  main.py  pyproject.toml
templates/: backup_mcp.json
