[project]
name = "modelica_simulation_mcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "websocket-client>=1.8.0",
]
